# DiscordBot

./: .env.example  .gitignore  CLAUDE.md  README.md  RESTRUCTURE_PLAN.md  TODO.md  WEB_SERVER.md  admin_interface_full.py  admin_interface_minimal.py  base_cog.py  config.py  install_piper.sh  main.py  old_voice_cog.py  pyproject.toml  requirements.txt  soundboard.json  test_migration.py
.claude/: CURRENT_WORK.md
bot/: base_cog.py  config.py  main.py  version.py
bot/cogs/: __init__.py  errors.py
bot/core/: config_base.py  config_manager.py  config_migrations.py  config_system.py  errors.py  guild_config_manager.py  system_config.py  transcript_session.py
bot/ui/: __init__.py  dashboard_full.py  dashboard_minimal.py
cogs/: activity_tracker.py  base_commands.py  edge-tts.py  global_error_handler.py  monitoring.py  monitors.py  soundboard.py  test.py  tts.py  voice_channel.py  voicespeech.py
data/config/: admins.json  base_config.json  soundboard.json  voice_state.json
data/soundboard/: soundboard.py
docs/: CLAUDE.md  COMMAND_RESTRUCTURE.md  CONFIG_MIGRATION.md  CONFIG_SYSTEM.md  LINUX_DEPLOYMENT.md  PHRASE_TRIGGERS_PLAN.md  SUGGESTIONS_28-10.md  WEB_SERVER.md  WHERE_WE_ARE_AT.md  config_inventory.json
docs/complete/: CONFIG_CATEGORY_MIGRATION.md  CONFIG_MIGRATION.md  (+1 more)
old files/: form.py  old_voice_cog.py  voice_channel.py
soundboard/: soundboard.py
tests/: test_config_system.py
utils/: activity_stats.py  admin_data_collector.py  admin_manager.py  auto_join_manager.py  pyaudio_player.py  user_stats.py
web/: __init__.py  app.py  websocket_manager.py
(+63 files in other folders)
