[project]
name = "discordbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "discord-ext-voice-recv==0.5.2a179",
    "dotenv>=0.9.9",
    "edge-tts==7.2.3",
    "fastapi==0.119.1",
    "jinja2==3.1.6",
    "numpy>=2.3.3",
    "pillow==12.0.0",
    "psutil==7.1.0",
    "pyaudio==0.2.14",
    "pygame==2.6.1",
    "pyttsx3==2.99",
    "speechrecognition==3.14.3",
    "uvicorn==0.38.0",
    "vosk>=0.3.45",
]
