[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discordbot"
version = "0.1.0"
description = "Discord bot with voice recognition, soundboard, and activity tracking"
requires-python = ">=3.13"
dependencies = [
    "discord-ext-voice-recv==0.5.2a179",
    "dotenv>=0.9.9",
    "edge-tts==7.2.3",
    "fastapi==0.119.1",
    "jinja2==3.1.6",
    "numpy>=2.3.3",
    "psutil==7.1.0",
    "pyaudio==0.2.14",
    "pytest==8.4.2",
    "python-multipart==0.0.20",
    "pyttsx3==2.99",
    "speechrecognition==3.14.3",
    "uvicorn==0.38.0",
    "vosk>=0.3.45",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "web*"]
exclude = ["data*", "logs*", "admin_data*", "models*", "tests*"]
